@@ -1,3 +1,4 @@
 - Added action gravityflow_step_start for custom logic to perform when any step starts.
 - Fixed an issue that prevented use of gravityflow_status_filter with an 'any' mode selection from being applied correctly.
 - Updated the Status Page to use a CSS Loading Spinner to replace the deprecated Spinner Gif from Gravity Forms Core.
+- Updated the Assignee Email Message Textarea to improve support for the TinyMCE Editor from Gravity Forms 2.5
